Update allocation API